@@ -1,6 +1,6 @@
 Package: multcomp
 Title: Simultaneous Inference for General Linear Hypotheses
-Version: 0.991-4
+Version: 0.991-5
 Date: $Date$
 Author: Torsten Hothorn, Frank Bretz and Peter Westfall
 Description: Simultaneous tests and confidence intervals
